--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.HerbSeedIconsPlugin
+displayName=Recolored Herb Seed Icons
+author=Mike-U5
+description="Recolors herb seed icons to match their respective herb. Plugin by Mike-U5, Icons by /u/Narsuaq"
+tags="seeds,cosmetic,inventory,icon"
+plugins=com.herbseedicons.HerbSeedIconsPlugin
